[package]
name = "initrd"
version = "0.1.0"
authors = ["Sojan James <sojan.james@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.92"
libcore = { git = "https://github.com/sabaton-rs/corelib.git"}
pal = { git = "https://github.com/sabaton-rs/corelib.git"}
walkdir = "2.3.2"
sabaton-hal = { git = "https://github.com/sabaton-rs/sabaton-hal.git"}
log = "0.4.14"
simple_logger = "1.13.0"

[profile.release]
opt-level = 'z' # turn on maximum optimizations.
lto = true      # Link-time-optimizations for further size reduction
debug = 2 # default is `false`; using `true` is also OK
codegen-units = 1
